--- a/src/main/resources/messages/AnsibleLintBundle.properties
+++ b/src/main/resources/messages/AnsibleLintBundle.properties
@@ -19,6 +19,7 @@ settings.group.integration=Integration
 settings.group.integration.only-run-when-config-file-present=Configuration file must be present
 settings.group.integration.only-run-when-config-file-present.recommended=RECOMMENDED
 settings.group.integration.only-run-when-config-file-present.comment=Only run 'ansible-lint' on opened YAML files when a config-file (".ansible-lint" or ".config/ansible-lint.yml") is present in the project's root directory
+settings.donation=If you like this plugin, please consider a <a href="{0}">donation</a>.<br>Thank you!
 
 statusbar.display.name=Ansible Lint
 statusbar.widget.text=Ansible Lint
