--- a/src/main/resources/messages/AnsibleLintBundle.properties
+++ b/src/main/resources/messages/AnsibleLintBundle.properties
@@ -28,3 +28,6 @@ statusbar.popup.title=Activate 'Ansible Lint' for project
 statusbar.action.text=Create ''{0}'' file
 
 action.info.config-file-created='Ansible Lint' config file created.
+action.show-detailed-information-online=Show detailed information online.
+action.disable-rule-check-using-noqa=Disable rule check using 'noqa'.
+action.copy-rule-id-to-clipboard=Copy rule id to clipboard.
