--- a/src/main/resources/messages/AnsibleLintBundle.properties
+++ b/src/main/resources/messages/AnsibleLintBundle.properties
@@ -18,7 +18,9 @@ settings.group.options.offline.comment=Disable installation of requirements.yml 
 settings.group.integration=Integration
 settings.group.integration.only-run-when-config-file-present=Configuration file must be present
 settings.group.integration.only-run-when-config-file-present.recommended=RECOMMENDED
-settings.group.integration.only-run-when-config-file-present.comment=Only run 'ansible-lint' on opened YAML files when a config-file (".ansible-lint" or ".config/ansible-lint.yml") is present in the project's root directory
+settings.group.integration.only-run-when-config-file-present.comment=Only run 'ansible-lint' on opened YAML files when a config-file ("{0}" or "{1}") is present in the project's root directory
+settings.group.integration.visualize-ignored-rules=Visualize ignored rules
+settings.group.integration.visualize-ignored-rules.comment=Ignored rules (from "{0}" or "{1}") will be visualized/categorized as "weak warning" (instead of its actual severity); otherwise they won't get shown at all
 settings.donation=If you like this plugin, please consider a <a href="{0}">donation</a>.<br>Thank you!
 
 statusbar.display.name=Ansible Lint
@@ -30,4 +32,7 @@ statusbar.action.text=Create ''{0}'' file
 action.info.config-file-created='Ansible Lint' config file created.
 action.show-detailed-information-online=Show detailed information online.
 action.disable-rule-check-using-noqa=Disable rule check using 'noqa'.
+action.add-rule-id-to-ignore-file=Add rule id to ignore-file.
 action.copy-rule-id-to-clipboard=Copy rule id to clipboard.
+
+annotation.ignored-prefix=IGNORED:
