new quick action: "Add rule id to 'skip_list' in config file."

--- a/src/main/resources/messages/AnsibleLintBundle.properties
+++ b/src/main/resources/messages/AnsibleLintBundle.properties
@@ -33,6 +33,7 @@ action.info.config-file-created='Ansible Lint' config file created.
 action.show-detailed-information-online=Show detailed information online.
 action.disable-rule-check-using-noqa=Disable rule check using 'noqa'.
 action.add-rule-id-to-ignore-file=Add rule id to ignore-file.
+action.add-rule-id-to-skip-list=Add rule id to 'skip_list' in config file.
 action.copy-rule-id-to-clipboard=Copy rule id to clipboard.
 
 annotation.ignored-prefix=IGNORED:
