--- a/src/main/resources/messages/AnsibleLintBundle.properties
+++ b/src/main/resources/messages/AnsibleLintBundle.properties
@@ -1,7 +1,7 @@
 notifications.group.title=Ansible Lint
 notifications.action.settings=Settings
-notifications.error.unable-to-execute=Unable to execute 'ansible-lint'. Please check your settings.
-notifications.warning.unexpected-return-code=Received an unexpected return code from 'ansible-lint'.
+notifications.error.unable-to-execute=Unable to execute Ansible Lint. Please check your settings.
+notifications.warning.unexpected-return-code=Received an unexpected return code from Ansible Lint.
 
 settings.display.name=Ansible Lint
 settings.group.executable=Executable
@@ -9,8 +9,10 @@ settings.group.executable.command=Command
 settings.group.executable.command.comment=The Ansible Lint executable (with full path, if necessary)
 settings.group.executable.test=Test
 settings.group.executable.test.exit-value=Unexpected return code ({0}) or response value.
-settings.group.executable.test.exception=Unable to call 'ansible-lint'.
-settings.group.executable.test.interrupted=Unable to retrieve output from 'ansible-lint'.
+settings.group.executable.test.old-version=Ansible Lint version {0} not up-to-date, should be equal or greater {1}.
+settings.group.executable.test.unable-to-parse-version=Unable to parse Ansible Lint's version output.
+settings.group.executable.test.exception=Unable to call Ansible Lint.
+settings.group.executable.test.interrupted=Unable to retrieve output from Ansible Lint.
 
 settings.group.options=Options
 settings.group.options.offline=Offline
@@ -18,22 +20,23 @@ settings.group.options.offline.comment=Disable installation of requirements.yml 
 settings.group.integration=Integration
 settings.group.integration.only-run-when-config-file-present=Configuration file must be present
 settings.group.integration.only-run-when-config-file-present.recommended=RECOMMENDED
-settings.group.integration.only-run-when-config-file-present.comment=Only run 'ansible-lint' on opened YAML files when a config-file ("{0}" or "{1}") is present in the project's root directory
+settings.group.integration.only-run-when-config-file-present.comment=Only run Ansible Lint on opened YAML files when a config-file ("{0}" or "{1}") is present in the project''s root directory
 settings.group.integration.visualize-ignored-rules=Visualize ignored rules
-settings.group.integration.visualize-ignored-rules.comment=Ignored rules (from "{0}" or "{1}") will be visualized/categorized as "weak warning" (instead of its actual severity); otherwise they won't get shown at all
+settings.group.integration.visualize-ignored-rules.comment=Ignored rules (from "{0}" or "{1}") will be visualized/categorized as "weak warning" (instead of its actual severity); otherwise they won''t get shown at all
 settings.donation=If you like this plugin, please consider a <a href="{0}">donation</a>.<br>Thank you!
 
 statusbar.display.name=Ansible Lint
 statusbar.widget.text=Ansible Lint
-statusbar.widget.tooltip=Activate 'Ansible Lint' for project
-statusbar.popup.title=Activate 'Ansible Lint' for project
+statusbar.widget.tooltip=Activate Ansible Lint for project
+statusbar.popup.title=Activate Ansible Lint for project
 statusbar.action.text=Create ''{0}'' file
 
-action.info.config-file-created='Ansible Lint' config file created.
+action.info.config-file-created=Ansible Lint config file created.
 action.show-detailed-information-online=Show detailed information online.
 action.disable-rule-check-using-noqa=Disable rule check using 'noqa'.
-action.add-rule-id-to-ignore-file=Add rule id to ignore-file.
-action.add-rule-id-to-skip-list=Add rule id to 'skip_list' in config file.
-action.copy-rule-id-to-clipboard=Copy rule id to clipboard.
+action.add-rule-id-to-ignore-file=Add rule ID to ignore-file.
+action.add-rule-id-to-skip-list=Add rule ID to 'skip_list' in config file.
+action.copy-rule-id-to-clipboard=Copy rule ID to clipboard.
 
 annotation.ignored-prefix=IGNORED:
+annotation.rule-id-prefix=Rule:
