--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,10 @@
 pluginName = Ansible Lint
-pluginVersion = 1.3.0
+pluginVersion = 1.4.0
 pluginSinceBuild = 221.3427.89
+
 platformVersion = 2022.2.4
+
 javaVersion = 11
 kotlinJvmTarget = 11
+
+kotlin.code.style=official
