--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 pluginName = Ansible Lint
-pluginVersion = 1.4.0
+pluginDescription = <a href="https://ansible-lint.readthedocs.io/">Ansible Lint</a> integration with automatic/continuous annotation of errors, warnings, and useful information while editing.
+pluginVersion = 1.4.1
 pluginSinceBuild = 221.3427.89
 
 platformVersion = 2022.2.4
