--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
 pluginName = Ansible Lint
 pluginDescription = <a href="https://ansible-lint.readthedocs.io/">Ansible Lint</a> integration with automatic/continuous annotation of errors, warnings, and useful information while editing.
-pluginVersion = 1.4.1
-pluginSinceBuild = 221.3427.89
+pluginVersion = 1.5.0
+pluginSinceBuild = 222
 
 platformVersion = 2022.2.4
 
-javaVersion = 11
-kotlinJvmTarget = 11
+javaVersion = 17
+kotlinJvmTarget = 17
 
 kotlin.code.style=official
+kotlin.stdlib.default.dependency = false
