Allow configuration of PATH
This enables support e.g. for homebrew installations of ansible on macOS.

--- a/src/main/resources/messages/AnsibleLintBundle.properties
+++ b/src/main/resources/messages/AnsibleLintBundle.properties
@@ -7,6 +7,9 @@ settings.display.name=Ansible Lint
 settings.group.executable=Executable
 settings.group.executable.command=Command
 settings.group.executable.command.comment=The Ansible Lint executable (with full path, if necessary)
+settings.group.executable.path=PATH
+settings.group.executable.path.comment=Set custom PATH environment variable
+settings.group.executable.path.button.default=Use Default
 settings.group.executable.test=Test
 settings.group.executable.test.exit-value=Unexpected return code ({0}) or response value.
 settings.group.executable.test.old-version=Ansible Lint version {0} not up-to-date, should be equal or greater {1}.
