--- a/src/main/resources/messages/AnsibleLintBundle.properties
+++ b/src/main/resources/messages/AnsibleLintBundle.properties
@@ -31,6 +31,9 @@ statusbar.widget.tooltip=Activate Ansible Lint for project
 statusbar.popup.title=Activate Ansible Lint for project
 statusbar.action.text=Create ''{0}'' file
 
+gotitpopup.statusbar.text=Ansible Lint can be activated by creating a configuration file in this project.
+gotitpopup.statusbar.browserlink=Details
+
 action.info.config-file-created=Ansible Lint config file created.
 action.show-detailed-information-online=Show detailed information online.
 action.disable-rule-check-using-noqa=Disable rule check using 'noqa'.
