--- a/src/main/resources/messages/AnsibleLintBundle.properties
+++ b/src/main/resources/messages/AnsibleLintBundle.properties
@@ -23,6 +23,8 @@ settings.group.integration.only-run-when-config-file-present.recommended=RECOMME
 settings.group.integration.only-run-when-config-file-present.comment=Only run Ansible Lint on opened YAML files when a config-file ("{0}" or "{1}") is present in the project''s root directory
 settings.group.integration.visualize-ignored-rules=Visualize ignored rules
 settings.group.integration.visualize-ignored-rules.comment=Ignored rules (from "{0}" or "{1}") will be visualized/categorized as "weak warning" (instead of its actual severity); otherwise they won''t get shown at all
+settings.group.integration.lint-excluded-paths=Lint files inside excluded paths
+settings.group.integration.lint-excluded-paths.comment=Start linting a file, even if it's within in the 'exclude_paths' of the Ansible Lint configuration file
 settings.donation=If you like this plugin, please consider a <a href="{0}">donation</a>.<br>Thank you!
 
 statusbar.display.name=Ansible Lint
