--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,14 @@
+pluginGroup = de.achimonline
 pluginName = Ansible Lint
 pluginDescription = <a href="https://ansible-lint.readthedocs.io/">Ansible Lint</a> integration with automatic/continuous annotation of errors, warnings, and useful information while editing.
-pluginVersion = 1.7.1
-pluginSinceBuild = 241
+pluginVersion = 1.8.0
+pluginSinceBuild = 242
 
-platformVersion = 2024.1
+platformType = IC
+platformVersion = 2024.2
 
-javaVersion = 17
-kotlinJvmTarget = 17
+javaVersion = 21
+kotlinJvmTarget = 21
 
 kotlin.code.style = official
 kotlin.stdlib.default.dependency = false
