--- a/src/main/resources/messages/AnsibleLintBundle.properties
+++ b/src/main/resources/messages/AnsibleLintBundle.properties
@@ -8,12 +8,14 @@ settings.group.executable=Executable
 settings.group.executable.command=Command
 settings.group.executable.command.comment=The Ansible Lint executable (with full path, if necessary)
 settings.group.executable.test=Test
+settings.group.executable.use-wsl=Use "Windows Subsystem for Linux" (WSL)
+settings.group.executable.use-wsl.experimental=EXPERIMENTAL
+settings.group.executable.use-wsl.comment=Uses 'wsl.exe' to run the command above. WSL-path-conversion will also be handled automatically.
 settings.group.executable.test.exit-value=Unexpected return code ({0}) or response value.
 settings.group.executable.test.old-version=Ansible Lint version {0} not up-to-date, should be equal or greater {1}.
 settings.group.executable.test.unable-to-parse-version=Unable to parse Ansible Lint's version output.
 settings.group.executable.test.exception=Unable to call Ansible Lint.
 settings.group.executable.test.interrupted=Unable to retrieve output from Ansible Lint.
-
 settings.group.options=Options
 settings.group.options.offline=Offline
 settings.group.options.offline.comment=Disable installation of requirements.yml and schema refreshing
@@ -25,7 +27,7 @@ settings.group.integration.visualize-ignored-rules=Visualize ignored rules
 settings.group.integration.visualize-ignored-rules.comment=Ignored rules (from "{0}" or "{1}") will be visualized/categorized as "weak warning" (instead of its actual severity); otherwise they won''t get shown at all
 settings.group.integration.lint-excluded-paths=Lint files inside excluded paths
 settings.group.integration.lint-excluded-paths.comment=Start linting a file, even if it's within in the 'exclude_paths' of the Ansible Lint configuration file
-settings.donation=If you like this plugin, please consider a <a href="{0}">donation</a>.<br>Thank you!
+settings.feedback=This plugin is free and open source. If you like it, please consider a <a href="{0}">donation</a>.<br>Starring the <a href="{1}">GitHub</a> repository or leaving a positive review at the <a href="{2}">JetBrains Marketplace</a> is also very much appreciated.<br>Thank you!
 
 statusbar.display.name=Ansible Lint
 statusbar.widget.text=Ansible Lint
