--- a/src/main/resources/messages/AnsibleLintBundle.properties
+++ b/src/main/resources/messages/AnsibleLintBundle.properties
@@ -11,6 +11,7 @@ settings.group.executable.test=Test
 settings.group.executable.use-wsl=Use "Windows Subsystem for Linux" (WSL)
 settings.group.executable.use-wsl.experimental=EXPERIMENTAL
 settings.group.executable.use-wsl.comment=Uses 'wsl.exe' to run the command above. WSL-path-conversion will also be handled automatically.
+settings.group.executable.use-wsl.distribution=Distribution:
 settings.group.executable.test.exit-value=Unexpected return code ({0}) or response value.
 settings.group.executable.test.old-version=Ansible Lint version {0} not up-to-date, should be equal or greater {1}.
 settings.group.executable.test.unable-to-parse-version=Unable to parse Ansible Lint's version output.
